# rpgpy

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  read_rpg.py  reader.pyx  release-version  rpg_cython.pyx  rpg_header.py  setup.py  utils.py
.github/workflows/: publish.yml  test.yml
rpgpy/: __init__.py  data.pyx  header.py  metadata.py  nc.py  rpg.py  rpg_cython.pyx  rpg_header.py  spcutil.py  utils.py  version.py
tests/e2e/: conftest.py
tests/e2e/level0/: l0_test_runner.py  l0_tests.py  main.py
tests/e2e/level1/: l1_test_runner.py  l1_tests.py  main.py
tests/unit/: test_data.py  test_misc.py  test_moments.py  test_nc_module.py  test_netcdf_generation.py  test_utils.py
