[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name="rpgPy"
description = "Cython code for reading binary files from RPG cloud radar."
authors = [{name = "Simo Tukiainen", email = "simo.tukiainen@fmi.fi"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

dependencies = ["numpy", "cython", "netCDF4", "tqdm", "numba"]

dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest-flakefinder",
    "pylint",
    "mypy",
    "types-tqdm",
]
dev = ["pre-commit"]

[project.urls]
Homepage = "https://github.com/actris-cloudnet/rpgpy"
Repository = "https://github.com/actris-cloudnet/rpgpy"
Changelog = "https://github.com/actris-cloudnet/rpgpy/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "rpgpy.version.__version__"}

[[tool.mypy.overrides]]
module = ["Cython.Build", "setuptools", "netCDF4", "numba", "rpgpy.data"]
ignore_missing_imports = true

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint]
max-line-length = 100
ignored-modules = ["netCDF4"]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-many-statements",
  "invalid-name",
  "too-many-branches",
  "import-error",
  "too-many-nested-blocks",
  "logging-fstring-interpolation",
  "too-many-locals",
  "cyclic-import",
  "duplicate-code",
  "too-few-public-methods",
]
