[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name="rpgPy"
description = "Cython code for reading binary files from RPG cloud radar."
authors = [{name = "Simo Tukiainen", email = "simo.tukiainen@fmi.fi"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

dependencies = ["numpy", "cython", "netCDF4", "tqdm", "numba"]

dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest-flakefinder",
    "mypy",
    "types-tqdm",
]
dev = ["pre-commit", "release-version"]

[project.urls]
Homepage = "https://github.com/actris-cloudnet/rpgpy"
Repository = "https://github.com/actris-cloudnet/rpgpy"
Changelog = "https://github.com/actris-cloudnet/rpgpy/blob/main/CHANGELOG.md"

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["Cython.Build", "setuptools", "netCDF4", "numba", "rpgpy.data"]
ignore_missing_imports = true

[tool.release-version]
filename = "rpgpy/version.py"
pattern = ["MAJOR = (?P<major>\\d+)", "MINOR = (?P<minor>\\d+)", "PATCH = (?P<patch>\\d+)"]
changelog = "CHANGELOG.md"

[tool.ruff]
extend-select = ["I"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools.dynamic]
version = {attr = "rpgpy.version.__version__"}
